classDiagram
    class User {
        +int id
        +string name
        +string email
        +string password
        +created_at
        +updated_at
        +hasMany(Article)
    }

    class Article {
        +int id
        +string title
        +string content
        +int user_id
        +int category_id
        +created_at
        +updated_at
        +belongsTo(User)
        +belongsTo(Category)
        +hasMany(Comment)
        +hasMany(Tag, article_tag)
    }

    class Category {
        +int id
        +string name
        +created_at
        +updated_at
        +hasMany(Article)
    }

    class Tag {
        +int id
        +string name
        +created_at
        +updated_at
        +hasMany(Article, article_tag)
    }

    class Comment {
        +int id
        +string content
        +int commentable_id
        +string commentable_type
        +int user_id
        +created_at
        +updated_at
        +belongsTo(User)
        +morphTo(Commentable)
    }

    class article_tag {
        +int article_id
        +int tag_id
    }

    User "1" --> "many" Article
    Article "many" --> "1" Category
    Article "many" --> "many" Tag : "via article_tag"
    Article "1" --> "many" Comment : "polymorphic"
    Tag "many" --> "many" Article : "via article_tag"
    Category "1" --> "many" Article
    Comment "1" --> "1" User
    Comment "1" --> "1" Article : "polymorphic"
